--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "pylint.args": [
         "--disable=missing-module-docstring",
         "--disable=missing-function-docstring",
+        "--disable=missing-class-docstring",
         "--disable=invalid-name",
         "--disable=line-too-long"
     ]
